[gd_scene load_steps=34 format=2]

[ext_resource path="res://asset/UI/The Midnight Background.png" type="Texture" id=1]
[ext_resource path="res://src/UI/BTNStage.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/UI/Color 5/Panel 1.png" type="Texture" id=3]
[ext_resource path="res://asset/UI/PNG/Button02.png" type="Texture" id=4]
[ext_resource path="res://src/scene/main.gd" type="Script" id=5]
[ext_resource path="res://asset/UI/Trees.png" type="Texture" id=6]
[ext_resource path="res://asset/UI/Sky.png" type="Texture" id=7]
[ext_resource path="res://asset/UI/Stars.png" type="Texture" id=8]
[ext_resource path="res://src/scene/Chapter1/explain/Explain_kelistrikan.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/scene/Chapter1/explain/Explain_silinder.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/scene/Chapter1/explain/Explain_pengapian.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/scene/Chapter1/explain/Explain_bahanbakar.tscn" type="PackedScene" id=12]
[ext_resource path="res://asset/Colored Square Buttons/Back col_Square Button.png" type="Texture" id=13]
[ext_resource path="res://addons/dialogic/Editor/Events/styles/InputFieldsStyle.tres" type="Theme" id=14]
[ext_resource path="res://src/scene/Chapter1/explain/Explain_k3.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/scene/Chapter1/explain/Explain_intro.tscn" type="PackedScene" id=16]
[ext_resource path="res://addons/dialogue_manager/example_balloon/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://src/scene/Chapter1/TTsK3.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/scene/Chapter1/dialogImage_kelistrikan.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/scene/Chapter1/TTs_pengapian.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/scene/Chapter1/TTs_kelistrikan.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/scene/Chapter2/Explain_spooring.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/scene/Chapter2/dialogImage_sasis.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/scene/Chapter2/dialogImage_pelurusan.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/scene/Chapter2/dragSasis.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/scene/Chapter1/TTs_overhaul.tscn" type="PackedScene" id=26]
[ext_resource path="res://asset/UI/PNG/Button09.png" type="Texture" id=27]
[ext_resource path="res://src/scene/Chapter2/Explain_sasis.tscn" type="PackedScene" id=28]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 56, 58 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
normal_map = ExtResource( 4 )
region_rect = Rect2( 0, 0, 56, 58 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 71, 46 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 17 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_right = 1038.0
margin_bottom = 603.0
texture = ExtResource( 7 )
expand = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1017.0
margin_bottom = 603.0
texture = ExtResource( 8 )
expand = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1035.0
margin_bottom = 603.0
texture = ExtResource( 6 )
expand = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
margin_left = 292.0
margin_top = 183.0
margin_right = 292.0
margin_bottom = 183.0
texture = ExtResource( 3 )

[node name="Chapter" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 88.0

[node name="Back" type="TextureButton" parent="Chapter"]
margin_left = 16.0
margin_top = 16.0
margin_right = 66.0
margin_bottom = 66.0
hint_tooltip = "Kembali"
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 13 )
expand = true

[node name="Button02" type="Button" parent="Chapter"]
margin_left = 259.0
margin_top = 23.0
margin_right = 429.0
margin_bottom = 83.0
hint_tooltip = "Tune Up Sepeda motor"
theme = ExtResource( 14 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Tune Up Sepeda motor"

[node name="Button03" type="Button" parent="Chapter"]
margin_left = 469.0
margin_top = 23.0
margin_right = 639.0
margin_bottom = 83.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Kendaraan Ringan"

[node name="Button04" type="Button" parent="Chapter"]
margin_left = 676.0
margin_top = 23.0
margin_right = 846.0
margin_bottom = 83.0
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
disabled = true
text = "Stay Tuned..."

[node name="level_container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 73.0
margin_bottom = -22.0

[node name="BTNStage" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -377.0
margin_top = -66.5
margin_right = -256.0
margin_bottom = -27.5
text = "Introducing"
tujuanStage = ExtResource( 16 )

[node name="BTNStage2" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -66.5
margin_right = -52.0
margin_bottom = -27.5
text = "K3"
levelId = 1.0
tujuanStage = ExtResource( 15 )

[node name="ProgressBar3" type="ColorRect" parent="level_container/BTNStage2"]
margin_left = -78.0
margin_top = 17.0
margin_right = -4.0
margin_bottom = 19.0
rect_rotation = 0.305965

[node name="BTNStage11" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 41.0
margin_top = 19.5
margin_right = 187.0
margin_bottom = 58.5
text = "Komponen Kelistrikan"
levelId = 2.0
tujuanStage = ExtResource( 19 )

[node name="ProgressBar2" type="ColorRect" parent="level_container/BTNStage11"]
margin_left = -96.0
margin_top = -67.0
margin_right = 26.0
margin_bottom = -66.0
rect_rotation = 41.0287

[node name="BTNStage3" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 207.0
margin_top = -76.5
margin_right = 328.0
margin_bottom = -37.5
text = "Kelistrikan"
levelId = 2.0
tujuanStage = ExtResource( 9 )

[node name="ProgressBar2" type="ColorRect" parent="level_container/BTNStage3"]
margin_left = -88.0
margin_top = 89.0
margin_right = 39.0
margin_bottom = 90.0
rect_rotation = -32.6367
rect_scale = Vector2( 0.846196, 0.663825 )

[node name="BTNStage7" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 701.0
margin_top = -9.5
margin_right = 844.0
margin_bottom = 36.5
text = "Sistem Pengapian "
levelId = 4.0
tujuanStage = ExtResource( 11 )

[node name="ProgressBar2" type="ColorRect" parent="level_container/BTNStage7"]
margin_left = -108.0
margin_top = -20.0
margin_right = 19.0
margin_bottom = -19.0
rect_rotation = 21.6635
rect_scale = Vector2( 0.941004, -0.790586 )

[node name="BTNStage8" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 476.0
margin_top = -52.5
margin_right = 597.0
margin_bottom = -13.5
text = "Kepala Silinder"
levelId = 3.0
tujuanStage = ExtResource( 10 )

[node name="ProgressBar2" type="ColorRect" parent="level_container/BTNStage8"]
margin_left = -12.0
margin_top = 18.0
margin_right = 115.0
margin_bottom = 21.0
rect_rotation = -172.079

[node name="BTNStage9" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 956.0
margin_top = -69.5
margin_right = 1111.0
margin_bottom = -23.5
text = "Sistem Bahan Bakar"
levelId = 5.0
tujuanStage = ExtResource( 12 )

[node name="ProgressBar2" type="ColorRect" parent="level_container/BTNStage9"]
margin_left = -111.43
margin_top = 90.496
margin_right = 15.57
margin_bottom = 91.496
rect_rotation = -29.9978

[node name="BTNStage4" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = 42.5
margin_right = -49.0
margin_bottom = 81.5
text = "Tantangan"
levelId = 1.0
tujuanStage = ExtResource( 18 )

[node name="ProgressBar4" type="ColorRect" parent="level_container/BTNStage4"]
margin_left = 59.0
margin_top = -66.0
margin_right = 124.0
margin_bottom = -64.0
rect_rotation = 90.5979
color = Color( 0.956863, 0.0627451, 0.0627451, 0.788235 )

[node name="BTNStage5" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 399.0
margin_top = -134.5
margin_right = 520.0
margin_bottom = -95.5
text = "Tantangan"
levelId = 3.0
tujuanStage = ExtResource( 21 )

[node name="ProgressBar5" type="ColorRect" parent="level_container/BTNStage5"]
margin_left = -10.0
margin_top = 39.0
margin_right = 55.0
margin_bottom = 41.0
rect_rotation = 159.798
color = Color( 0.956863, 0.0627451, 0.0627451, 0.788235 )

[node name="BTNStage6" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 711.0
margin_top = 110.5
margin_right = 832.0
margin_bottom = 149.5
text = "Tantangan"
levelId = 5.0
tujuanStage = ExtResource( 20 )

[node name="ProgressBar6" type="ColorRect" parent="level_container/BTNStage6"]
margin_left = 59.0
margin_top = -72.0
margin_right = 124.0
margin_bottom = -70.0
rect_rotation = 88.6219
color = Color( 0.956863, 0.0627451, 0.0627451, 0.788235 )

[node name="BTNStage10" parent="level_container" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1032.0
margin_top = 48.5
margin_right = 1153.0
margin_bottom = 87.5
text = "Tantangan"
levelId = 6.0
tujuanStage = ExtResource( 26 )

[node name="ProgressBar7" type="ColorRect" parent="level_container/BTNStage10"]
margin_left = 27.0
margin_top = -63.0
margin_right = 92.0
margin_bottom = -61.0
rect_rotation = 66.8712
color = Color( 0.956863, 0.0627451, 0.0627451, 0.788235 )

[node name="level_container_ch2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 73.0
margin_bottom = -22.0

[node name="BTNStage" parent="level_container_ch2" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -377.0
margin_top = -66.5
margin_right = -256.0
margin_bottom = -27.5
text = "Chasis"
tujuanStage = ExtResource( 28 )

[node name="BTNStage10" parent="level_container_ch2" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -30.5
margin_right = 120.0
margin_bottom = 8.5
text = "jenis Chasis"
levelId = 1.0
tujuanStage = ExtResource( 23 )

[node name="ProgressBar7" type="ColorRect" parent="level_container_ch2/BTNStage10"]
margin_left = -64.0
margin_top = 1.0
margin_right = 1.00002
margin_bottom = 3.0
rect_rotation = 14.9419
color = Color( 1, 1, 1, 0.788235 )

[node name="BTNStage13" parent="level_container_ch2" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -50.5
margin_right = -69.0
margin_bottom = -11.5
text = "Komponen Chasis"
levelId = 1.0
tujuanStage = ExtResource( 25 )

[node name="ProgressBar7" type="ColorRect" parent="level_container_ch2/BTNStage13"]
margin_left = -64.0
margin_top = 1.0
margin_right = 1.00002
margin_bottom = 3.0
rect_rotation = 14.9419
color = Color( 1, 1, 1, 0.788235 )

[node name="BTNStage11" parent="level_container_ch2" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 190.0
margin_top = -11.5
margin_right = 311.0
margin_bottom = 27.5
text = "Spooring Mobil"
levelId = 2.0
tujuanStage = ExtResource( 22 )

[node name="ProgressBar7" type="ColorRect" parent="level_container_ch2/BTNStage11"]
margin_left = -64.0
margin_top = 1.0
margin_right = 1.00002
margin_bottom = 3.0
rect_rotation = 14.9419
color = Color( 1, 1, 1, 0.788235 )

[node name="BTNStage12" parent="level_container_ch2" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 377.0
margin_top = -34.5
margin_right = 498.0
margin_bottom = 4.5
text = "Pelurusan Mobil"
levelId = 2.0
tujuanStage = ExtResource( 24 )

[node name="ProgressBar7" type="ColorRect" parent="level_container_ch2/BTNStage12"]
margin_left = -64.0
margin_top = 41.0
margin_right = 1.00002
margin_bottom = 43.0
rect_rotation = -21.6212
color = Color( 1, 1, 1, 0.788235 )

[node name="BTNStage14" parent="level_container_ch2" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 567.0
margin_top = -64.5
margin_right = 688.0
margin_bottom = -25.5
disabled = true
text = "Stay Tuned..."
levelId = 5.0

[node name="ProgressBar7" type="ColorRect" parent="level_container_ch2/BTNStage14"]
margin_left = -64.0
margin_top = 41.0
margin_right = 1.00002
margin_bottom = 43.0
rect_rotation = -21.6212
color = Color( 1, 1, 1, 0.788235 )

[node name="HScrollBar" type="HScrollBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -171.0
margin_top = -54.0
margin_right = 125.0
margin_bottom = -36.0
max_value = 200.0
page = 10.0

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = -150.0
margin_right = 182.0
margin_bottom = -40.0

[node name="Label" type="RichTextLabel" parent="Panel"]
margin_left = 8.0
margin_top = 10.0
margin_right = 161.0
margin_bottom = 102.0
theme = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=red]TIPS: [/color]
SELESAIKAN LATIHAN SOAL UNTUK MEMBUKA STAGE BERIKUTNYA"
text = "TIPS: 
SELESAIKAN LATIHAN SOAL UNTUK MEMBUKA STAGE BERIKUTNYA"

[connection signal="pressed" from="Chapter/Back" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Chapter/Button02" to="." method="_on_CH1_pressed"]
[connection signal="pressed" from="Chapter/Button03" to="." method="_on_CH2_pressed"]
